<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.amine.bou.readerforselfoss.HomeActivity"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.stkent.amplify.prompt.DefaultLayoutPromptView
        android:id="@+id/prompt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prompt_view_user_opinion_question_title="@string/rating_prompt_title"
        app:prompt_view_user_opinion_question_positive_button_label="@string/rating_prompt_yes"
        app:prompt_view_user_opinion_question_negative_button_label="@string/rating_prompt_no"
        app:prompt_view_positive_feedback_question_title="@string/rating_prompt_rating_title"
        app:prompt_view_positive_feedback_question_positive_button_label="@string/rating_prompt_rating_yes"
        app:prompt_view_positive_feedback_question_negative_button_label="@string/rating_prompt_rating_no"
        app:prompt_view_critical_feedback_question_title="@string/rating_prompt_feedback_title"
        app:prompt_view_critical_feedback_question_positive_button_label="@string/rating_prompt_feedback_yes"
        app:prompt_view_critical_feedback_question_negative_button_label="@string/rating_prompt_feedback_no"
        app:prompt_view_thanks_title="@string/rating_prompt_thanks"
        app:prompt_view_positive_button_background_color="@color/colorPrimary"
        app:prompt_view_positive_button_text_color="@color/white"
        app:prompt_view_positive_button_border_color="@color/colorPrimary"
        app:prompt_view_negative_button_background_color="@color/colorAccent"
        app:prompt_view_negative_button_border_color="@color/white"
        app:prompt_view_thanks_display_time_ms="2000"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/prompt_view">

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/intern_coordLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:theme="@style/ToolBarStyle"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

                </android.support.design.widget.AppBarLayout>

                <FrameLayout
                    android:id="@+id/drawer_layout"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v4.widget.SwipeRefreshLayout
                        android:id="@+id/swipeRefreshLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/my_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/background_grey"
                            android:clipToPadding="false"
                            android:scrollbars="vertical"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                    </android.support.v4.widget.SwipeRefreshLayout>

                </FrameLayout>
            </LinearLayout>

        </android.support.design.widget.CoordinatorLayout>
        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            app:bb_behavior="shy"
            android:layout_alignParentBottom="true"
            app:bb_tabXmlResource="@xml/bottombar"
            app:bb_activeTabColor="@color/white"
            app:bb_badgeBackgroundColor="@color/colorPrimary"
            app:bb_inActiveTabColor="@color/black"
            app:bb_badgesHideWhenActive="false" />
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>